--- a/test-version.html
+++ b/test-version.html
@@ -52,7 +52,6 @@
 				}
 				
 				function checkWords(){
-					console.log($scope.words[3].join(""))
 					var word = {}
 					for(var i=3; i < 7; i++){
 						word[i] = $scope.words[i].join("")
@@ -70,25 +69,13 @@
 					receive: function(e, ui){
 						if($scope.words[e.target.id].length > 6){
 							ui.item.sortable.cancel()
-							// console.log(ui.item.sortable)
-						} else {
-							setTimeout(function(){
-								checkWords()
-							}, 100)
 						}
-						// if($scope.words[e.target.id].length > 7){
-						// 	console.log(ui.item.sortable)
-						// } else {
-						// 	setTimeout(function(){
-						// 		checkWords()
-						// }, 100)
+					},
+					update: function(e, ui){
+						setTimeout(function(){
+							checkWords()
+						}, 100)
 					}
-				}
-
-				$scope.margins = {
-					2: 250,
-					6: 200,
-					11: 150
 				}
 
 			})
