--- a/client/index.html
+++ b/client/index.html
@@ -2,35 +2,7 @@
 <html>
 	<head>
 		<title></title>
-				<style type="text/css">
-			.tile{
-				border: 2px solid black;
-				text-align: center;
-				vertical-align: center;
-				padding: 1px;
-				margin: 10px;
-				display: inline-block;
-				height: 25px;
-				width: 25px;
-				float: left;
-			}
-
-			.placeholder{
-				background-color: gray;
-				margin: 10px;
-				height: 25px;
-				width: 25px;
-				border: 1px dotted blue;
-				float: left;
-			}
-
-			.target{
-				margin: 10px;
-				border: 2px solid red;
-				width: 425px;
-				height: 50px;
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="static/style/style.css">
 		<script src="jquery/dist/jquery.js"></script>
 		<script src="jquery-ui/jquery-ui.js"></script>
 		<script src="angular/angular.js"></script>
