fixes part of setInterval

--- a/client/index.html
+++ b/client/index.html
@@ -133,18 +133,24 @@
 					get_scores()
 				}
 
-				game_length = 60*5
+				game_length = 50
 
 				$scope.start_game = function(){
 					pick_words()
 					$("#racks").show("slow")
 					$scope.timer = game_length
-					var interval = setInterval(countdown(), 1)
+					var interval = setInterval(function(){
+						$scope.timer--
+						console.log($scope.timer)
+						if($scope.timer<=0){
+							clearInterval(interval)
+						}
+					}, 100)
 				}
 
 				function countdown(){
-					console.log("countdown function")
-					$scope.timer -= 0.1
+					console.log("countdown function", $scope.timer)
+					$scope.timer--
 					// if($scope.timer<=0){
 					// 	clearInterval(interval)
 					// }
