--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
 				return factory
 			})
 
-			myApp.controller("wordController", function($scope, wordFactory){
+			myApp.controller("wordController", function($scope, $interval, wordFactory){
 
 				// Letter scores based on Peter Norvig's letter-frequency calculations.
 				// http://norvig.com/scrabble-letter-scores.html
@@ -133,28 +133,40 @@
 					get_scores()
 				}
 
-				game_length = 50
+				game_length = 600*5
 
 				$scope.start_game = function(){
 					pick_words()
 					$("#racks").show("slow")
 					$scope.timer = game_length
-					var interval = setInterval(function(){
-						$scope.timer--
-						console.log($scope.timer)
-						if($scope.timer<=0){
-							clearInterval(interval)
-						}
-					}, 100)
+					$scope.interval = $interval(countdown, 100)
 				}
 
 				function countdown(){
-					console.log("countdown function", $scope.timer)
 					$scope.timer--
-					// if($scope.timer<=0){
-					// 	clearInterval(interval)
-					// }
+					
+					$scope.time_remaining = {
+						minutes: Math.floor($scope.timer/600),
+						seconds: ("0"+Math.floor(($scope.timer % 600)/10)).slice(-2),
+						tenths: $scope.timer % 10
+					}
+
+					if($scope.timer<=0){
+						stopInterval()
+					}
 				}
+
+				function stopInterval(){
+					if(angular.isDefined($scope.interval)){
+						$interval.cancel($scope.interval)
+						$scope.interval = undefined
+					}
+				}
+
+				// Per angular documentation, $intervals need to be explicitly cancelled
+				$scope.$on("$destroy", function(){
+					stopInterval()
+				})
 
 				$scope.sortableOptions = {
 					placeholder: "placeholder",
@@ -194,7 +206,9 @@
 					<td class="score">{{ scores.total }}</td>
 				</tr>
 			</table>
-			{{ timer }}
+			<div class="clock">
+				{{ time_remaining.minutes }}:{{ time_remaining.seconds }}.{{ time_remaining.tenths }}
+			</div>
 		</div>
 	</body>
 </html>
