--- a/client/index.html
+++ b/client/index.html
@@ -99,9 +99,11 @@
 				function pick_words(){
 					wordFactory.pick_words(function(words){
 						console.log(words)
+						$scope.answer = words
+						$scope.answer_total = [3,4,5,6].map(i => words[i].score * i).reduce((a,b) => a + b, 0)
 						$scope.tiles = ""
 						for(i=3; i<=6; i++){
-							$scope.tiles += words[i].toUpperCase()
+							$scope.tiles += words[i].word.toUpperCase()
 						}
 						$scope.tiles = shuffle($scope.tiles.split(""))
 						$scope.words = {
@@ -114,11 +116,11 @@
 					})
 				}
 
+				// This line doesn't technically need to be here, as the pick_words() function is called again on game start.  However, without it, the $("#racks").show() looks odd and discontinuous, presumably because the racks don't have height until the tiles have been initialized.
 				pick_words()
 
 				function get_scores(){
 					wordFactory.get_scores($scope.words, function(scores){
-						// callback in here
 						$scope.scores = scores
 						var total = 0
 						for(var i = 3; i<=6; i++){
@@ -138,6 +140,7 @@
 				$scope.start_game = function(){
 					pick_words()
 					$("#racks").show("slow")
+					$("#answer").show("slow") // take this line out later
 					$scope.timer = game_length
 					$scope.interval = $interval(countdown, 100)
 				}
@@ -209,6 +212,25 @@
 			<div class="clock">
 				{{ time_remaining.minutes }}:{{ time_remaining.seconds }}.{{ time_remaining.tenths }}
 			</div>
+		</div>
+		<div id="answer" style="display: none;">
+			<h2>This was our answer:</h2>
+			<table>
+				<tr ng-repeat="(index, word) in answer">
+					<td>
+						<div ng-model="word.word" class="target green" id="{{index}}">
+							<div ng-repeat="letter in word.word track by $index" class="tile">{{letter}} <span class="value">{{letter_scores[letter]}}</span></div>
+						</div>
+					</td>
+					<td class="score">{{ word.score }}</td>
+					<td class="score">x {{index}} = </td>
+					<td class="score">{{ word.score * index }}</td>
+				</tr>
+				<tr><td> </td>
+					<td class="score" colspan=2>TOTAL: </td>
+					<td class="score">{{ answer_total }}</td>
+				</tr>
+			</table>
 		</div>
 	</body>
 </html>
