--- a/client/index.html
+++ b/client/index.html
@@ -139,12 +139,13 @@
 
 				$scope.start_game = function(){
 					pick_words()
-					$scope.message = ""
+					$scope.message = "Placeholder"
 					$scope.sortableOptions.disabled = false
 					$("#racks").show("slow")
 					$("#answer").hide()
 					$scope.timer = game_length
 					$scope.interval = $interval(countdown, 100)
+					document.getElementById("clock_svg_text").setAttribute("fill", "green")
 				}
 
 				$scope.end_game = function(){
@@ -153,11 +154,37 @@
 				}
 
 				function update_clock(){
-					var canvas  = document.getElementById("clock_canvas")
-					var ctx = canvas.getContext("2d")
-					ctx.lineWidth = 100
-					ctx.arc(100,100,100,Math.PI*3/2,Math.PI*3/2 + 2*Math.PI*($scope.timer/game_length), true)
-					ctx.stroke()
+					// Code to generate an SVG with a slice of a circle from StackOverflow user Holger Will
+					// http://stackoverflow.com/a/32754195/5749040
+					var svgElem = document.getElementById("clock_svg")
+					var path = document.getElementById("clock_svg_path")
+
+					var cx=100
+					var cy=100
+					var rx=100
+					var ry=100
+
+					var p = svgElem.createSVGPoint()
+					p.x = 0
+					p.y = 1
+
+					var m = svgElem.createSVGMatrix()
+
+					var angle = 180 * ($scope.timer/game_length)
+
+					var p2 = p.matrixTransform(m.rotate(angle))
+					p2.x = cx + p2.x*rx
+					p2.y = cy + p2.y*ry
+
+					// var path = document.createElementNS("http://www.w3.org/2000/svg", "path")
+					// svgElem.appendChild(path)
+
+					$scope.d = "M" + cx + " " + (cy+ry) + "A" + rx + " " + ry + " 0 0 1" + p2.x + " " + p2.y + "L" + cx + " "+cy+"z"
+					path.setAttribute("d", $scope.d)
+
+					if ($scope.timer == 300){
+						document.getElementById("clock_svg_text").setAttribute("fill", "red")
+					}
 				}
 
 				function countdown(){
@@ -172,6 +199,7 @@
 					update_clock()
 
 					if($scope.timer<=0){
+						console.log("Time's up!")
 						$scope.message = "Time's up!"
 						stopInterval()
 					}
@@ -233,13 +261,15 @@
 				</tr>
 			</table>
 			<div class="clock">
-				{{ time_remaining.minutes }}:{{ time_remaining.seconds }}.{{ time_remaining.tenths }}
-				<canvas id="clock_canvas" width=200 height=200></canvas>
+				<svg id="clock_svg" width=200 height=200>
+					<path id="clock_svg_path" d="M100 100"></path>
+					<text x=25 y=110 fill="green" id="clock_svg_text">{{ time_remaining.minutes }}:{{ time_remaining.seconds }}.{{ time_remaining.tenths }}</text>
+				</svg>
 				<button ng-show="all_correct" ng-click="end_game()">I'm done!</button>
 			</div>
+			<div class="message"><h2>{{message}}</h2></div>
 		</div>
 		<div id="answer" style="display: none;">
-			<h2>{{message}}</h2>
 			<h2>This was our answer:</h2>
 			<table>
 				<tr ng-repeat="(index, word) in answer">
