--- a/test-version.html
+++ b/test-version.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Static HTML version of site.  For testing client-side elements (such as the sortables or the countdown clock) without possibly interfering with anything server side. -->
 <html>
 	<head>
 		<title></title>
