errors are now shown in window.alert()s to aid in mobile debugging

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="static/style/style.css">
+		<script type="text/javascript">
+			// Code to display errors as alerts (for debugging on mobile) from GitHub user AlphaGit
+			// https://github.com/AlphaGit/random-javascript/tree/master/alert-errors
+			window.onerror = function(m,u,l){window.alert(m+"\n"+u+":"+l)}
+		</script>
 		<script src="jquery/dist/jquery.js"></script>
 		<script src="jquery-ui/jquery-ui.js"></script>
 		<script src="angular/angular.js"></script>
