adds jquery.ui.touch-punch.js so sortables will work on mobile

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 		</script>
 		<script src="jquery/dist/jquery.js"></script>
 		<script src="jquery-ui/jquery-ui.js"></script>
+		<script src="jquery.ui.touch-punch.js"></script>
 		<script src="angular/angular.js"></script>
 		<script src="angular-route/angular-route.js"></script>
 		<script src="angular-ui-sortable/src/sortable.js"></script>
